@@ -52,7 +52,7 @@ serialization_example_2(Zorba* aZorba)
   try {
     XQuery_t lQuery = aZorba->compileQuery("for $i in (1 to 3) return <a> { $i } </a>"); 
 
-    lQuery->serialize(std::cout);
+    lQuery->execute(std::cout);
   } catch (ZorbaException& e) {
     std::cerr << e << std::endl;
     return false;
@@ -73,7 +73,7 @@ serialization_example_3(Zorba* aZorba)
     Zorba_SerializerOptions lSerOptions;
     lSerOptions.ser_method = ZORBA_SERIALIZATION_METHOD_HTML;
 
-    lQuery->serialize(std::cout, &lSerOptions);
+    lQuery->execute(std::cout, &lSerOptions);
   } catch (ZorbaException& e) {
     std::cerr << e << std::endl;
     return false;
@@ -94,7 +94,7 @@ serialization_example_4(Zorba* aZorba)
     Zorba_SerializerOptions lSerOptions;
     lSerOptions.indent = ZORBA_INDENT_YES;
 
-    lQuery->serialize(std::cout, &lSerOptions);
+    lQuery->execute(std::cout, &lSerOptions);
   } catch (ZorbaException& e) {
     std::cerr << e << std::endl;
     return false;
@@ -112,7 +112,7 @@ serialization_example_5(Zorba* aZorba)
     Zorba_SerializerOptions lSerOptions;
     lSerOptions.omit_xml_declaration = ZORBA_OMIT_XML_DECLARATION_YES;
 
-    lQuery->serialize(std::cout, &lSerOptions);
+    lQuery->execute(std::cout, &lSerOptions);
   } catch (ZorbaException& e) {
     std::cerr << e << std::endl;
     return false;
@@ -130,7 +130,7 @@ serialization_example_6(Zorba* aZorba)
     Zorba_SerializerOptions lSerOptions;
     lSerOptions.byte_order_mark = ZORBA_BYTE_ORDER_MARK_YES;
 
-    lQuery->serialize(std::cout, &lSerOptions);
+    lQuery->execute(std::cout, &lSerOptions);
   } catch (ZorbaException& e) {
     std::cerr << e << std::endl;
     return false;
